trunk/Archive2/07/1aff5899e4d349/output
main.cpp:1:6: error: non-ASCII characters are not allowed outside of literals and identifiers
void ∧() {}
     ^
main.cpp:1:10: error: expected unqualified-id
void ∧() {}
       ^
main.cpp:2:6: error: non-ASCII characters are not allowed outside of literals and identifiers
void ∨() {}
     ^
main.cpp:2:10: error: expected unqualified-id
void ∨() {}
       ^
main.cpp:3:6: error: non-ASCII characters are not allowed outside of literals and identifiers
void ⊕() {}
     ^
main.cpp:3:10: error: expected unqualified-id
void ⊕() {}
       ^
6 errors generated.
