trunk/Archive2/07/1aff5899e4d349/main.cpp
void ∧() {}
void ∨() {}
void ⊕() {}

int main() {}